add initcall thingy

--- a/kernel/kernel/Makefile
+++ b/kernel/kernel/Makefile
@@ -1,4 +1,4 @@
-obj-y += kernel.ocpp sched.ocpp stdio.ocpp time.ocpp kprintf.ocpp interrupts.ocpp elf.ocpp
+obj-y += kernel.ocpp sched.ocpp stdio.ocpp time.ocpp kprintf.ocpp interrupts.ocpp elf.ocpp initcall.ocpp
 
 obj-$(CONFIG_FB_SUPPORT) += framebuffer.ocpp psf.ocpp
 
