--- a/kernel/arch/aarch64/Kconfig
+++ b/kernel/arch/aarch64/Kconfig
@@ -2,6 +2,14 @@ config ARCH_AARCH64
   bool
   default y
 
+# stuff from arch/Kconfig
+
+config ARCH_PAGE_SIZE
+  int
+  default 4096
+
+# END stuff from arch/Kconfig
+
 menu "Security"
 
 config ENABLE_STACKPROTECTOR
