--- a/kernel/arch/m68k/Kconfig
+++ b/kernel/arch/m68k/Kconfig
@@ -2,6 +2,14 @@ config ARCH_M68K
   bool
   default y
 
+# stuff from arch/Kconfig
+
+config ARCH_PAGE_SIZE
+  int
+  default 128
+
+# END stuff from arch/Kconfig
+
 menu "Security"
 
 config ENABLE_STACKPROTECTOR
