--- a/kernel/scripts/Makefile.build
+++ b/kernel/scripts/Makefile.build
@@ -24,23 +24,18 @@ override INT_CXXFLAGS += -I arch/$(BUILD_ARCH)/include -I stdlibs/libc/include -
 
 RUST_TARGET := i686-unknown-linux-gnu
 
-%.oarsc:
-	@#FIXME: get rid of the copy, stupid
-	@cd $(dir $@) && cargo build --release --target $(RUST_TARGET)
-	@cp $(dir $@)target/$(RUST_TARGET)/release/$(basename $(notdir $@)).a $@
+define build_rust
+@echo "  RS $(1)"
+@rustc \
+	--target $(RUST_TARGET) \
+	-Cpanic=abort \
+	--crate-type rlib \
+	$(3) \
+	$(1) -o $(2)
+endef
 
-%.ors: %.rs
-	@#TODO: -Zcrate-attr=no_std
-	@echo "  RS $<"
-	rustc \
-	  --target $(RUST_TARGET) \
-	  -L $(objtree)/rust/ \
-	  -Cpanic=abort \
-	  --emit=obj \
-	  --crate-type rlib \
-	  --crate-name $(basename $(notdir $@)) \
-	  --extern kernel \
-	  $< -o $@
+%.rlib: %.rs ./rust/libkernel.rlib
+	$(call build_rust,$<,$@,--extern kernel=$(objtree)/rust/libkernel.rlib)
 
 ifeq ($(CONFIG_UBSAN), y)
 override INT_CFLAGS += -fsanitize=undefined -fno-strict-overflow
