--- a/kernel/rust/Makefile
+++ b/kernel/rust/Makefile
@@ -1,3 +1,4 @@
-obj-d += rlibk
+lib-$(CONFIG_RUST_SUPPORT) += libkernel.rlib $(wildcard $(shell rustc --print sysroot)/lib/rustlib/$(RUST_TARGET)/lib/libcore*.rlib)
 
-obj-$(CONFIG_RUST_SUPPORT) += test.ors
+$(objtree)/libkernel.rlib: $(objtree)/kernel.rs
+	$(call build_rust, $<, $@)
