--- a/kernel/rust/Makefile
+++ b/kernel/rust/Makefile
@@ -1,4 +1,1 @@
-lib-$(CONFIG_RUST_SUPPORT) += libkernel.rlib $(wildcard $(shell rustc --print sysroot)/lib/rustlib/$(RUST_TARGET)/lib/libcore*.rlib)
-
-$(objtree)/libkernel.rlib: $(objtree)/kernel.rs
-	$(call build_rust, $<, $@)
+obj-d := libkernel
