Do not build all rust stuff as a static library
This broke initicall lmao, when linked as a static library and not referenced anywhere the linker would throw it out

--- a/kernel/scripts/Makefile.build
+++ b/kernel/scripts/Makefile.build
@@ -34,8 +34,8 @@ define build_rust
 	$(1) -o $(2)
 endef
 
-%.rlib: %.rs ./rust/libkernel/libkernel.rlib
-	$(call build_rust,$<,$@,--extern kernel=$(objtree)/rust/libkernel/libkernel.rlib)
+%.ors: %.rs ./rust/libkernel/libkernel.rlib
+	$(call build_rust,$<,$@,--extern kernel=$(objtree)/rust/libkernel/libkernel.rlib --emit=obj)
 
 ifeq ($(CONFIG_UBSAN), y)
 override INT_CFLAGS += -fsanitize=undefined -fno-strict-overflow
