some mm refactoring

--- a/kernel/mm/Makefile
+++ b/kernel/mm/Makefile
@@ -1,1 +1,1 @@
-obj-y += kheap.ocpp vmm.ocpp pmm.ocpp memmap.ocpp memtest.ocpp slab.ocpp
+obj-y += kheap.ocpp vmm.ocpp pmm.ocpp memmap.ocpp memtest.ocpp slab.ocpp mm.ocpp
