CI fix - do not fail all immediately

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,6 +4,7 @@ jobs:
   build-test-nix:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         stuff:
           - flake: IA-32
