no more multiboot2 prekernel nonsense & general cleanup
this breaks a few things, also for whatever reason when the tests run (that allocate a bunch of memory) the initramfs gets corrupted! _oops_

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -84,7 +84,7 @@ jobs:
           python3 tools/locchart.py >> $GITHUB_STEP_SUMMARY
           echo '# cloc output' >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          cloc kernel/ prekernel/ >> $GITHUB_STEP_SUMMARY
+          cloc kernel/ >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
 
       - name: codespell
