--- a/boot/rootfs-x86_32/boot/limine.conf
+++ b/boot/rootfs-x86_32/boot/limine.conf
@@ -4,5 +4,5 @@ verbose: yes
 
 /vix
     protocol: multiboot2
-    kernel_path: boot():/boot/kernel.bin
+    kernel_path: boot():/boot/kernel.elf
     module_path: boot():/boot/initramfs.bin
