--- a/boot/rootfs-x86_32/boot/grub/grub.cfg
+++ b/boot/rootfs-x86_32/boot/grub/grub.cfg
@@ -2,6 +2,6 @@ set default=0
 set timeout=1
  
 menuentry "vix" {
-   multiboot2 /boot/kernel.bin
+   multiboot2 /boot/kernel.elf
    module2 /boot/initramfs.bin
 }
