--- a/kernel/arch/x86/Kconfig
+++ b/kernel/arch/x86/Kconfig
@@ -14,14 +14,14 @@ config ARCH_PAGE_SIZE
   default 4096
 
 config KERNEL_HIGHER_HALF
-  int
+  hex
   depends on !ENABLE_KERNEL_64
-  default 3221225472 # 0xC0000000
+  default 0xC0000000
 
 config HHDM_SIZE
-  int
+  hex
   depends on !ENABLE_KERNEL_64
-  default 536870912 # 0x20000000 512MiB
+  default 0x20000000 # 512MiB
 
 # END stuff from arch/Kconfig
 
