x86: switch to .lds.S linker script and add PHYS_ADDRESS Kconfig option

--- a/kernel/arch/x86/Kconfig
+++ b/kernel/arch/x86/Kconfig
@@ -25,6 +25,13 @@ config HHDM_SIZE
 
 # END stuff from arch/Kconfig
 
+config PHYS_ADDRESS
+  hex "Physical Load Address"
+  depends on !ENABLE_KERNEL_64
+  default 0x100000
+  help
+    physical address the kernel will be loaded at
+
 config ENABLE_KERNEL_64
   default n
   bool "64-bit kernel"
