--- a/kernel/arch/x86/Makefile
+++ b/kernel/arch/x86/Makefile
@@ -1,3 +1,4 @@
+extratargets-$(CONFIG_ENABLE_KERNEL_32) += linker_32.lds
 obj-$(CONFIG_ENABLE_NETWORKING) += drivers/net/rtl8139.ocpp
 obj-$(CONFIG_ENABLE_FTRACE) += trace.ocpp
 obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
