--- a/kernel/mm/Makefile
+++ b/kernel/mm/Makefile
@@ -1,1 +1,2 @@
-obj-y += kheap.ocpp vmm.ocpp pmm.ocpp memmap.ocpp memtest.ocpp slab.ocpp mm.ocpp
+obj-y += kheap.ocpp pmm.ocpp memmap.ocpp memtest.ocpp slab.ocpp mm.ocpp
+obj-$(CONFIG_ARCH_HAS_PAGING) += vmm.ocpp
