--- a/kernel/arch/x86/Makefile
+++ b/kernel/arch/x86/Makefile
@@ -5,11 +5,11 @@ obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
 
 obj-y += drivers/ps2.ocpp drivers/pci.ocpp drivers/pic_8259.ocpp drivers/rtc.ocpp drivers/serial.ocpp
 obj-y += generic/cpu.ocpp generic/devices.ocpp
-obj-y += cpubasics.ocpp cpuid.ocpp elf.ocpp gdt.ocpp modelf.ocpp multitasking.ocpp sched.ocpp multitasking.oS simd.ocpp tss.ocpp io.ocpp
+obj-y += cpubasics.ocpp cpuid.ocpp elf.ocpp gdt.ocpp modelf.ocpp multitasking.ocpp sched.ocpp multitasking_s.oS simd.ocpp tss.ocpp io.ocpp
 
 obj-$(CONFIG_ENABLE_KERNEL_32) += drivers/text80x25.ocpp
-obj-$(CONFIG_ENABLE_KERNEL_32) += paging.onasm isr.onasm simd.onasm gdt.onasm idt.onasm
-obj-$(CONFIG_ENABLE_KERNEL_32) += archinit_32.ocpp multiboot2.ocpp memorymap.ocpp isr.ocpp isrs.ocpp ldt.ocpp idt.ocpp paging_32.ocpp syscall_32.oS syscall_32.ocpp except_32.oS except_32.ocpp
+obj-$(CONFIG_ENABLE_KERNEL_32) += paging.onasm isr_s.onasm simd_s.onasm gdt_s.onasm idt_s.onasm
+obj-$(CONFIG_ENABLE_KERNEL_32) += archinit_32.ocpp multiboot2.ocpp memorymap.ocpp isr.ocpp isrs.ocpp ldt.ocpp idt.ocpp paging_32.ocpp syscall_32_s.oS syscall_32.ocpp except_32_s.oS except_32.ocpp
 obj-$(CONFIG_ENABLE_KERNEL_32) += libgcc.ocpp
 obj-$(CONFIG_ENABLE_KERNEL_32) += ia32_prekernel.oS
 
