--- a/kernel/arch/xtensa/Makefile
+++ b/kernel/arch/xtensa/Makefile
@@ -1,6 +1,6 @@
 obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
 
 obj-y += generic/cpu.ocpp generic/devices.ocpp
-obj-y += archinit.ocpp sched.oS sched.ocpp
+obj-y += archinit.ocpp sched_s.oS sched.ocpp
 
 obj-y += libgcc.ocpp
