--- a/kernel/arch/m68k/Makefile
+++ b/kernel/arch/m68k/Makefile
@@ -1,7 +1,7 @@
 obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
 
 obj-y += generic/cpu.ocpp generic/devices.ocpp
-obj-y += archinit.ocpp except.ocpp except.oS sched.oS sched.ocpp
+obj-y += archinit.ocpp except.ocpp except_s.oS sched_s.oS sched.ocpp
 
 obj-$(CONFIG_PLAIN_BINARY) += startup.oS
 
