remove .ocpp suffix

--- a/kernel/abi/linux/syscalls/Makefile
+++ b/kernel/abi/linux/syscalls/Makefile
@@ -1,1 +1,1 @@
-obj-$(CONFIG_ENABLE_ABI_LINUX) += exit.ocpp write.ocpp read.ocpp sysinfo.ocpp
+obj-$(CONFIG_ENABLE_ABI_LINUX) += exit.o write.o read.o sysinfo.o
