--- a/kernel/arch/m68k/Makefile
+++ b/kernel/arch/m68k/Makefile
@@ -1,8 +1,8 @@
-obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.ocpp
+obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.o
 
-obj-y += generic/cpu.ocpp generic/devices.ocpp
-obj-y += archinit.ocpp except.ocpp except_s.oS sched_s.oS sched.ocpp
+obj-y += generic/cpu.o generic/devices.o
+obj-y += archinit.o except.o except_s.oS sched_s.oS sched.o
 
 obj-$(CONFIG_PLAIN_BINARY) += startup.oS
 
-obj-y += libgcc.ocpp
+obj-y += libgcc.o
