--- a/kernel/drivers/Makefile
+++ b/kernel/drivers/Makefile
@@ -1,4 +1,4 @@
 obj-d := acpi
 
-obj-y := net/generic_card.ocpp ms_mouse.ocpp keyboard.ocpp
-obj-$(CONFIG_ENABLE_FAKE_NETWORK_CARD) += net/fake_card.ocpp
+obj-y := net/generic_card.o ms_mouse.o keyboard.o
+obj-$(CONFIG_ENABLE_FAKE_NETWORK_CARD) += net/fake_card.o
