--- a/kernel/kernel/Makefile
+++ b/kernel/kernel/Makefile
@@ -1,12 +1,12 @@
 obj-d += ksh
 
-obj-y += kernel.ocpp sched.ocpp stdio.ocpp time.ocpp kprintf.ocpp interrupts.ocpp elf.ocpp initcall.ocpp irq.ocpp panic.ocpp
+obj-y += kernel.o sched.o stdio.o time.o kprintf.o interrupts.o elf.o initcall.o irq.o panic.o
 
-obj-$(CONFIG_FB_SUPPORT) += framebuffer.ocpp psf.ocpp
+obj-$(CONFIG_FB_SUPPORT) += framebuffer.o psf.o
 
-obj-$(CONFIG_ENABLE_BUILTIN_FONT) += unifont.bin.ocpp
+obj-$(CONFIG_ENABLE_BUILTIN_FONT) += unifont.bin.o
 
-obj-$(CONFIG_ENABLE_SYMBOL_TABLE) += symbols.ocpp
+obj-$(CONFIG_ENABLE_SYMBOL_TABLE) += symbols.o
 
 $(objtree)/%.bin.cpp: ../fonts/Unifont-APL8x16-15.0.01.psf
 	@echo "  BIN2C $<"
