--- a/kernel/drivers/acpi/Makefile
+++ b/kernel/drivers/acpi/Makefile
@@ -1,4 +1,4 @@
-obj-$(CONFIG_ENABLE_ACPI) := $(patsubst %.c,%.oc,$(subst $(srctree)/,,$(wildcard $(srctree)/uacpi/source/*.c)))
+obj-$(CONFIG_ENABLE_ACPI) := $(patsubst %.c,%.o,$(subst $(srctree)/,,$(wildcard $(srctree)/uacpi/source/*.c)))
 obj-$(CONFIG_ENABLE_ACPI) += uacpi_interface.o
 
 # TODO: allow kernel makefiles to specify extra CFLAGS, include paths (goes with CFLAGS ig) and stuff..
