--- a/kernel/arch/m68k/Makefile
+++ b/kernel/arch/m68k/Makefile
@@ -1,8 +1,8 @@
 obj-$(CONFIG_ENABLE_STACKPROTECTOR) += stackprotector.o
 
 obj-y += generic/cpu.o generic/devices.o
-obj-y += archinit.o except.o except_s.oS sched_s.oS sched.o
+obj-y += archinit.o except.o except_s.o sched_s.o sched.o
 
-obj-$(CONFIG_PLAIN_BINARY) += startup.oS
+obj-$(CONFIG_PLAIN_BINARY) += startup.o
 
 obj-y += libgcc.o
