remove .oasm/.onasm suffix

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -122,7 +122,7 @@ alldefconfig: scripts/kconfig/Makefile
 # clean targets
 clean: modclean
 	@rm -f kernel.o kernel.bin symtab.S symtab.o kernel_partial.o
-	@find ./arch ./drivers ./fs ./include ./kernel ./net ./mm ./stdlibs ./tests ./abi ./rust \( -name '*.oasm' -o -name '*.onasm' -o -name '*.lds' -o -name '*.o' -o -name '*.os' -o -name '*.rlib' -o -name '*.ors' \) -type f -delete
+	@find ./arch ./drivers ./fs ./include ./kernel ./net ./mm ./stdlibs ./tests ./abi ./rust \( -name '*.lds' -o -name '*.o' -o -name '*.os' -o -name '*.rlib' -o -name '*.ors' \) -type f -delete
 
 distclean: clean
 	@rm -f .config .config_old
