fix build again sob

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -7,7 +7,11 @@ include Makefile.version
 BUILD_SUBDIRS := kernel drivers fs net tests mm stdlibs abi rust
 
 -include .config
+ifneq ($(CONFIG_ARCH),)
 BUILD_ARCH := $(patsubst "%",%,$(CONFIG_ARCH))
+else
+BUILD_ARCH := $(patsubst "%",%,$(ARCH))
+endif
 
 define getcfgvar
 ifdef CONFIG_$(1)
